@@ -5,8 +5,9 @@ Fixed link colour for search
 Fixed percentage views in *_activities.html
 Updated chunks with generalised name
 Updated translations
-Updated csv download headers in view_list_*.js
-Added activity-status-code query to csv downloads
+Updated csv download headers in view_list_activities.js
+Added activity-status-code query to view_list_activities csv downloads
+Added transaction-type header to view_list_Transactions csv downloads
 
 
 Development Portal (2017-09-03 shi)
